- Modified NVP and Offset manual calibration tooltips

--- a/ADIN1100-Eval/Views/FaultDetectorSettingsView.xaml
+++ b/ADIN1100-Eval/Views/FaultDetectorSettingsView.xaml
@@ -207,7 +207,7 @@
                         </StackPanel>
 
                         <telerik:RadButton Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Margin="6" Style="{StaticResource CalibrateButtonStyle}" Command="{Binding FaultDetectionCalibrateCommand}" CommandParameter="Offset"
-                                           ToolTip="Perform offset calibration.">
+                                           ToolTip="Manual offset calibration.">
                             <Border BorderBrush="{Binding CalibrateOffsetButtonColor}"
                                     BorderThickness="3">
                                 <TextBlock Text="Calibrate"
@@ -252,7 +252,7 @@
                         </StackPanel>
 
                         <telerik:RadButton Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Margin="6" Style="{StaticResource CalibrateButtonStyle}" Command="{Binding FaultDetectionCalibrateCommand}" CommandParameter="NVP"
-                                           ToolTip="Perform cable calibration.">
+                                           ToolTip="Manual NVP calibration.">
                             <Border BorderBrush="{Binding CalibrateCableButtonColor}"
                                     BorderThickness="3">
                                 <TextBlock Text="Calibrate"
