- Reset to default alignment

--- a/ADIN1100-Eval/Views/CableDiagnosticsStatusADIN1100.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticsStatusADIN1100.xaml
@@ -47,7 +47,7 @@
                            Style="{StaticResource Label}" Width="Auto" 
                            Text="100.5" HorizontalAlignment="Left"/>-->
             </Grid>
-            <Grid Margin="0 -110">
+            <Grid Margin="0,-105">
                 <local:CableDiagnosticImageControl/>
             </Grid>
         </StackPanel>
