--- a/ADIN1100-Eval/Views/FaultDetectorView.xaml
+++ b/ADIN1100-Eval/Views/FaultDetectorView.xaml
@@ -25,7 +25,8 @@
                                       Background="Transparent"
                                       BorderThickness="0"
                                       Focusable="False"
-                                      IsBusy="{Binding IsFaultDetectorBusy}">
+                                      IsBusy="{Binding IsFaultDetectorBusy}"
+                                      BusyContent="{Binding FaultDetectorBusyContent}">
                 <Grid Grid.Row="0" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
