--- a/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
@@ -119,11 +119,11 @@
                         <Rectangle Height="30" Width="200" Fill="Black" HorizontalAlignment="Left"/>
                     </Grid>
                 </StackPanel>
-                <TextBlock Margin="20 190 0 0" 
+                <TextBlock Margin="50 190 0 0" 
                            Visibility="{Binding DistToFaultVisibility}">
-                    Distance to fault = 
+                    Fault at  
                 </TextBlock>
-                <TextBlock Margin="120 190 0 0"
+                <TextBlock Margin="100 190 0 0"
                            Text="{Binding DistToFault, StringFormat={}{0:0.000}}"
                            Visibility="{Binding DistToFaultVisibility}"/>
                 <Line Stretch="Fill" Stroke="Black" X2="1" Margin="0 120 0 0" Height="5" Width="Auto"
