--- a/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
@@ -119,13 +119,11 @@
                         <Rectangle Height="30" Width="200" Fill="Black" HorizontalAlignment="Left"/>
                     </Grid>
                 </StackPanel>
-                <TextBlock Margin="50 190 0 0" 
-                           Visibility="{Binding DistToFaultVisibility}">
-                    Fault at  
-                </TextBlock>
-                <TextBlock Margin="100 190 0 0"
+                <!--<TextBlock Margin="50 190 0 0" Visibility="{Binding DistToFaultVisibility}" FontSize="22">Fault at</TextBlock>-->
+                <TextBlock Margin="50 180 0 0"
                            Text="{Binding DistToFault, StringFormat={}{0:0.000}}"
-                           Visibility="{Binding DistToFaultVisibility}"/>
+                           Visibility="{Binding DistToFaultVisibility}"
+                           FontSize="22"/>
                 <Line Stretch="Fill" Stroke="Black" X2="1" Margin="0 120 0 0" Height="5" Width="Auto"
                       Visibility="{Binding DistToFaultVisibility}"/>
             </Grid>
