changed the visibility from visible to collapsed

--- a/ADIN1100-Eval/Views/FaultDetectorSettingsView.xaml
+++ b/ADIN1100-Eval/Views/FaultDetectorSettingsView.xaml
@@ -306,7 +306,7 @@
             <telerik:RadButton HorizontalAlignment="Center"
                                Width="125"
                                Style="{StaticResource ResetToDefaultButtonStyle}" 
-                               Command="{Binding ResetFaultDetectorCommand}"/>
+                               Command="{Binding ResetFaultDetectorCommand}" Visibility="Collapsed"/>
         </StackPanel>
     </Grid>
 </UserControl>
