--- a/ADIN1100-Eval/MainWindow.xaml
+++ b/ADIN1100-Eval/MainWindow.xaml
@@ -141,16 +141,13 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*" MinWidth='380' />
                         <ColumnDefinition Width="8" />
-                        <ColumnDefinition Width="1" />
+                        <ColumnDefinition Width="2.25*" />
                     </Grid.ColumnDefinitions>
                     <Border Grid.Column='0'>
-                        <views:LogWindow HorizontalAlignment='Stretch' VerticalAlignment='Stretch' Margin='10,10,10,10' DataContext='{Binding FeedbackViewModel, 
-            diag:PresentationTraceSources.TraceLevel=High}' ></views:LogWindow>
-
+                        <views:LogWindow HorizontalAlignment='Stretch' VerticalAlignment='Stretch' Margin='10,10,10,10' DataContext='{Binding FeedbackViewModel, diag:PresentationTraceSources.TraceLevel=High}' ></views:LogWindow>
                     </Border>
                     <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitter}" />
-                    <Grid Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" DataContext='{Binding DeviceViewModel, 
-            diag:PresentationTraceSources.TraceLevel=High}'>
+                    <Grid Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" DataContext='{Binding DeviceViewModel, diag:PresentationTraceSources.TraceLevel=High}'>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
