--- a/ADIN1100-Eval/Views/FaultDetectorView.xaml
+++ b/ADIN1100-Eval/Views/FaultDetectorView.xaml
@@ -14,16 +14,17 @@
     <Grid>
         <Grid HorizontalAlignment='Stretch' VerticalAlignment='Stretch' Background="White">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5*" />
-                <ColumnDefinition Width="5" />
-                <ColumnDefinition Width="3*" />
+                <!--<ColumnDefinition Width="5*" />-->
+                <ColumnDefinition Width="*" />
+                <!--<ColumnDefinition Width="5" />-->
+                <!--<ColumnDefinition Width="3*" />-->
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Row="0" Grid.Column="2">
+            <!--<Grid Grid.Row="0" Grid.Column="2">
                 <local:LinkStatus/>
             </Grid>
 
-            <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Style="{DynamicResource VerticalGridSplitter}" />
+            <GridSplitter Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Style="{DynamicResource VerticalGridSplitter}" />-->
 
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <telerik:RadBusyIndicator x:Name="FaultDetectorBusyindicator" 
