--- a/ADIN1100-Eval/Views/DeviceView.xaml
+++ b/ADIN1100-Eval/Views/DeviceView.xaml
@@ -134,7 +134,8 @@
                     <TextBlock HorizontalAlignment='Left' VerticalAlignment='Stretch' FontWeight='Bold' FontSize='18' Margin='16,0,0,10'><Run Text='Select Local'/></TextBlock>
                     <ListBox x:Name='DongleList' Margin="0 5" Height="80" Width="155" ScrollViewer.HorizontalScrollBarVisibility='Auto' ScrollViewer.VerticalScrollBarVisibility='Auto' 
                          ItemsSource='{Binding Devices}' ItemTemplate="{StaticResource DeviceListTemplate}" 
-                         SelectionChanged='DongleList_SelectionChanged' SelectedItem='{Binding SelectedDevice, diag:PresentationTraceSources.TraceLevel=High}'>
+                         SelectionChanged='DongleList_SelectionChanged' SelectedItem='{Binding SelectedDevice, diag:PresentationTraceSources.TraceLevel=High}'
+                             IsEnabled="{Binding IsFaultDetectorBusy, Converter={StaticResource InverseBooleanConverter}}">
                         <ListBox.ItemContainerStyle>
                             <Style TargetType="{x:Type ListBoxItem}">
                                 <Setter Property="Focusable" Value='{Binding IsPresent, diag:PresentationTraceSources.TraceLevel=High}'/>
